--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <section class="player-shell">
       <div class="phone">
         <video id="video" playsinline controls poster="">
-          <source src="https://v1.pinimg.com/videos/iht/expMp4/72/69/6f/72696f7cc50c0f1d1cdb60c9d56ea2c9_720w.mp4" type="video/mp4" />
+          <source src="https://cdn.videy.co/gM4AiIxA1.mp4" type="video/mp4" />
           Browser kamu tidak mendukung pemutar video HTML5.
         </video>
 	
